use of locators type id, class, name, linked text, partial linked text, css selector, pageLoadTimeOut(), implicitlyWait()

--- a/.classpath
+++ b/.classpath
@@ -11,16 +11,37 @@
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/auto-common-1.2.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/auto-service-1.0.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/auto-service-annotations-1.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/bcpkix-jdk15on-1.64.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/bcprov-jdk15on-1.64.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/byte-buddy-1.12.10.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/checker-qual-3.12.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/commons-codec-1.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/commons-compress-1.21.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/commons-lang3-3.12.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/dec-0.1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/docker-java-3.2.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/docker-java-api-3.2.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/docker-java-core-3.2.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/docker-java-transport-3.2.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/docker-java-transport-httpclient5-3.2.13.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/error_prone_annotations-2.11.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/failsafe-3.2.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/failureaccess-1.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/gson-2.9.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/guava-31.1-jre.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/httpclient5-5.1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/httpcore5-5.1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/httpcore5-h2-5.1.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/j2objc-annotations-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/jackson-annotations-2.10.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/jackson-core-2.10.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/jackson-databind-2.10.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/jakarta.activation-1.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/jcl-over-slf4j-1.7.30.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/jcommander-1.82.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/jna-5.8.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/jsr305-3.0.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/jtoml-2.0.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar"/>
@@ -87,5 +108,6 @@
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/selenium-support-4.2.2-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/slf4j-api-1.7.36.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/testng-7.4.0 (1).jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tofael/eclipse-workspace/April2022CoreJava/lib/webdrivermanager-5.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
